alignment fixes for header and aem-marketo component

--- a/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
+++ b/marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
@@ -785,8 +785,8 @@ button#shareWithTeamsBtn {
 }
 .dropdown:hover > .dropdown-menu, .dropend:hover > .dropdown-menu{
     display: block;
-    margin-top: .125em;
-    margin-left: .125em;
+    margin-top: .05em;
+    margin-left: .05em;
 }
 @media screen and (min-width:769px) {
     .dropend:hover > .dropdown-menu{
